Maybe fix iPad overflow

--- a/src/ui/styles/root.scss
+++ b/src/ui/styles/root.scss
@@ -17,6 +17,8 @@ html {
 html,
 body {
     height: 100%;
+    height: 100vh;
+    overflow: hidden;
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans",
         sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
